k8s/applications/web/mastodon/redis/svc.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-redis-headless
  namespace: mastodon
spec:
  clusterIP: None
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/instance: mastodon-redis
    app.kubernetes.io/name: redis
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-redis-master
  namespace: mastodon
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: tcp-redis
    nodePort: null
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: mastodon-redis
    app.kubernetes.io/name: redis
  sessionAffinity: None
  type: ClusterIP
